--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html, body {
 }
 
 body {
-  background-color: #7a00cb;
+  background-color: #06000a;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
